Authentication using API

--- a/web_app/app/static/css/style.css
+++ b/web_app/app/static/css/style.css
@@ -193,7 +193,7 @@ header {
 
 #product1 {
     text-align: center;
-    background-color: orange;
+    background-color: #f9f9f9;
     border-radius: 50px;
     margin-top: 20px;
 }
