--- a/web_app/app/templates/index.html
+++ b/web_app/app/templates/index.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{{ url_for('auth.login')}}">
                         <i class="fa-solid fa-user"></i>
                     </a>
                 </li>
