--- a/web_app/app/templates/login.html
+++ b/web_app/app/templates/login.html
@@ -37,6 +37,10 @@
         <a href="/forgot-password">Forgot Password?</a>
     </div>
 
+    <div>
+        <a href="{{ url_for('auth.register') }}">Register</a>
+    </div>
+
     <!-- Error Summary (if any) -->
     <div class="error-summary" id="error-summary">
         <p>Please fix the errors above</p>
