--- a/web_app/app/templates/base.html
+++ b/web_app/app/templates/base.html
@@ -14,7 +14,7 @@
         <nav>
             <ul id="navbar">
                 <li><a class="active" href="{{ url_for('home.home') }}">Home</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="{{ url_for('home.shop') }}">Shop</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
