--- a/web_app/app/templates/category.html
+++ b/web_app/app/templates/category.html
@@ -1,3 +1,11 @@
+
+{% extends 'base.html' %}
+
+{% block title %}User Profile - E-Shop{% endblock %}
+
+{% block content %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +23,7 @@
             width: 90%;
             max-width: 1200px;
             margin: 0 auto;
+            margin-bottom: 20px;
             padding-top: 20px;
         }
         h2 {
@@ -134,3 +143,5 @@
 
 </body>
 </html>
+
+{% endblock %}
