--- a/web_app/app/templates/product_detail.html
+++ b/web_app/app/templates/product_detail.html
@@ -150,7 +150,7 @@
                 <form action="{{ url_for('cart.add_to_cart', product_id=product.id) }}" method="post">
                     <button type="submit" class="btn btn-primary"><i class="fas fa-cart-plus"></i> Add to Cart</button>
                 </form>
-                <form action="#" method="post">
+                <form >
                     <button type="submit" class="btn btn-secondary"><i class="fas fa-heart"></i> Add to Favorites</button>
                 </form>
             </div>
